# datastructurelabsession3

./: .gitignore  CMakeLists.txt
include/: queryprocess.h  tree.h  treefactory.h
src/: main.cpp
